2014-03-22  Richard Murray  <murray@sidamo.local>

	* tests/discrete_test.py (TestDiscrete.test_sample_system): added
	conversions using tustin and zoh to catch 'dt' bug #5

	* src/dtime.py (sample_system): Changed 'dt' to 'Ts' to fix bug #4

	* tests/frd_test.py (TestFRD.testbdalg): added unit tests for bdalg
	functions operating on FRD data

	* src/bdalg.py (series, parallel, negate, feedback): updated
	documentation to note that FRD ovjects work.
	(feedback): updated conversions to allow for FRD

2013-07-15  Richard Murray  <murray@altura-2.local>

	* src/frdata.py, src/xferfcn.py: updated to use __truediv__ and
	__rtruediv__ for compatibility with python3

2013-07-14  Richard Murray  <murray@altura-2.local>

	* src/dtime.py (sample_system): added check to make sure
	cont2discrete is available in scipy.signal
	(sample_system): added docstring

2013-06-24  Richard Murray  <murray@altura-2.local>

	* tests/minreal_test.py (TestMinreal.testMinrealBrute),
	src/xferfcn.py (_convertToTransferFunction), src/statesp.py
	(StateSpace.__rmul__), src/margins.py (stability_margins): changed
	exception syntax to be python3 compatibile (works for python2.6+)
	
2013-06-10  Richard Murray  <murray@altura-2.local>

	* src/xferfcn.py (TransferFunction.horner): small fix to docstring

	* src/freqplot.py (nyquist_plot): small fix to docstring

2013-06-09  Richard Murray  <murray@altura-2.local>

	* tests/bdalg_test.py (TestFeedback.testScalarSS)
	(TestFeedback.testScalarTF): added simple test of default argument
	to feedback() for state space and transfer function systems

	* tests/frd_test.py (TestFRD.testFeedback): added test of default
	argument to feedback() for FRD type

	* src/bdalg.py (feedback): 
	* src/frdata.py (FRD.feedback):
	* src/statesp.py (StateSpace.feedback):
	patched in default value of 1 for other system in feedback().
	Contributed by Ryan Krauss <rkrauss@siue.edu>
	
	* tests/xferfcn_test.py (TestXferFcn.testEvalFrMIMO)